--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">Meu Estoque</string>
     <string name="bnt_criarProduto">NOVO PRODUTO</string>
+    <string name="bnt_editarProduto">EDITAR PRODUTO</string>
     <string name="btn_salvar">SALVAR</string>
+    <string name="btn_editar">EDITAR</string>
+    <string name="btn_deletar">DELETAR</string>
     <string name="titulo_listaProduto">LISTA DE PRODUTOS</string>
     <string name="txt_nomeProduto">Nome do Produto:</string>
     <string name="txt_valorProduto">Valor do Produto:</string>
